--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Demo for MHCID</title>
   </head>
   <body>
+    <a href="css_demo.html">This is a link to the demo file</a>
     <h1>Demo for MHCID</h1>
     <p>Some super fun awesome magic automation!</p>
     <h4>Adam Dershewitz</h4>
