--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <a href="css_demo.html">This is a link to the demo file</a>
+    <a href="font-sample.html">Font Sample</a>
     <h1>Demo for MHCID</h1>
     <p>Some super fun awesome magic automation!</p>
     <h4>Adam Dershewitz</h4>
