--- a/font-sample.html
+++ b/font-sample.html
@@ -1,1 +1,28 @@
-
+<html>
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Cedarville+Cursive&family=Fugaz+One&display=swap" rel="stylesheet">
+    <style>
+      .title {
+        font-family: 'Averia Serif Libre', serif;
+        size: 300%;
+      }
+      
+      .body {
+        font-family: 'Cedarville Cursive', cursive;
+      }
+      
+      .footer {
+          font-family: 'Fugaz One', sans-serif;
+      }
+    </style>  
+  </head>
+  <body>
+    <p class="title">Once up on a horse</p>
+    <p class="body">A few years ago I was out camping with my kids near Crater Lake National Park and we decided to go out on
+      a horseback riding trip. We sidled up to the nears horseback riding proprieter and reserved some horses. My 7 year old daughter 
+      had her own horse and my 5 year old son was riding with me. We were travelling through some amazing high desert forests when we came
+       around a corner and saw a black bear in the middle of the trail. The dog that was on the ride with us immediately ran towards 
+      the bear and it took off running into the woods. We waited a nervous 5 minutes for the dog to return unhurt.<p>
+    <p class="footer">Lesson learned: Bears are awesome.<p>
+  </body>
+</html>
