--- a/font-sample.html
+++ b/font-sample.html
@@ -3,12 +3,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Cedarville+Cursive&family=Fugaz+One&display=swap" rel="stylesheet">
     <style>
       .title {
-        font-family: 'Averia Serif Libre', serif;
-        size: 300%;
+        font-family: 'Cedarville Cursive', cursive;
+        font-size: 300%;
       }
       
       .body {
-        font-family: 'Cedarville Cursive', cursive;
+        font-family: 'Averia Serif Libre', serif;
       }
       
       .footer {
