--- a/font-sample.html
+++ b/font-sample.html
@@ -5,6 +5,7 @@
       .top {
         font-family: 'Cedarville Cursive', cursive;
         font-size: 300%;
+        margin: 0;
       }
       
       .middle {
