--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Demo for MHCID</title>
   </head>
   <body>
-    <a href="css_demo.html">This is a link to the demo file</a>
-    <a href="font-sample.html">Font Sample</a>
+    <div><a href="css_demo.html">This is a link to the demo file</a></div>
+    <div><a href="font-sample.html">Font Sample</a></div>
+    <div><a href="bootstrap-sample.html">Bootstrap Sample</a></div>
     <h1>Demo for MHCID</h1>
     <p>Some super fun awesome magic automation!</p>
     <h4>Adam Dershewitz</h4>
