--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -27,6 +27,11 @@
     		</ul>
   	</div>
     </nav>
+	  
+    <div class="container">
+  	<h3>Bears: Nature's Fluffmaster</h3>
+  	<p>Bear facts here</p>
+    </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
