--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -10,24 +10,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-default">
-  	<div class="container">
-    		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">Programming is Fun</a>
-    		</div>
-    		<ul class="nav navbar-nav">
-      			<li class="active">
-		 		<a href="#">Home</a>
-		 	</li>
-      			<li>
-				<a href="#">Cool Stuff</a>
-			</li>
-      			<li>
-				<a href="#">Even More Cool Stuff</a>
-			</li>
-    		</ul>
-  	</div>
-    </nav>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Page 1</a></li>
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</nav>
 	  
     <div class="container">
   	<h3>Bears: Nature's Fluffmaster</h3>
