--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
+<div class="container-fluid">
+		<div class="row text-center">
+			<div class="col">
+				<h1>Nested demo</h1>
+				<h2>Currently displaying</h2>
+				<h2><div class="hidden-sm-up">XS device</div></h2>
+				<h2><div class="hidden-xs-down hidden-md-up">SM device</div></h2>
+				<h2><div class="hidden-sm-down hidden-lg-up">MD device</div></h2>
+				<h2><div class="hidden-md-down hidden-xl-up">LG device</div></h2>
+				<h2><div class="hidden-lg-down">XL device</div></h2>
+			</div>
+		</div>
+	  </div>
 	  
     <div class="container">
   	<h3>Bears: Nature's Fluffmaster</h3>
