--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -10,21 +10,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
-<div class="container-fluid">
-		<div class="row text-center">
-			<div class="col">
-				<h1>Nested demo</h1>
-				<h2>Currently displaying</h2>
-				<h2><div class="hidden-sm-up">XS device</div></h2>
-				<h2><div class="hidden-xs-down hidden-md-up">SM device</div></h2>
-				<h2><div class="hidden-sm-down hidden-lg-up">MD device</div></h2>
-				<h2><div class="hidden-md-down hidden-xl-up">LG device</div></h2>
-				<h2><div class="hidden-lg-down">XL device</div></h2>
-			</div>
-		</div>
-	  </div>
+<nav class="navbar navbar-expand-sm bg-light">
+
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 1</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 2</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link 3</a>
+    </li>
+  </ul>
+
+</nav>
 	  
-    <div class="container">
+    <div class="container-fluid">
   	<h3>Bears: Nature's Fluffmaster</h3>
   	<p>Bear facts here</p>
     </div>
