--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -26,7 +26,9 @@
   
 <div class="container-fluid">
    <h3>Bears: Nature's Fluffmaster</h3>
-   <p>Bear facts here</p>
+   <p id="fact1">Bear facts here</p>
+   <p id="fact2">Bear facts here</p>
+   <p id="fact3">Bear facts here</p>
 </div>
 
 </body>
