--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -3,33 +3,87 @@
 <head>
   <title>Bears: Nature's Fluffmasters</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <style>
+	.contentcontainer {
+		margin-top: 10px;
+	}
+	
+	.bearinforow {
+		margin: 10px;
+	}
+	.bearheader {
+		text-align: center;
+	}
+  </style>
 </head>
 <body>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">BEARS!</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#fact1">Bear Fact 1</a></li>
-      <li><a href="#fact2">Bear Fact 2</a></li>
-      <li><a href="#fact3">Bear Fact 3</a></li>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Bears Are Awesome</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#bearfacts1">Bear Facts 1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#bearfacts2">Bear Facts 2</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Bears
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Are</a>
+          <a class="dropdown-item" href="#">Awesome</a>
+        </div>
+      </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search The Bears" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
 </nav>
-  
-<div class="container-fluid">
-   <h3>Bears: Nature's Fluffmaster</h3>
-   <p id="fact1">Bear facts here</p>
-   <p id="fact2">Bear facts here</p>
-   <p id="fact3">Bear facts here</p>
-</div>
 
+<div class="contentcontainer container-fluid">
+	<div class="row">
+	<div class="col bearheader">
+		<h1>Bear Facts 1</h1>
+		</div>
+	</div>
+	<div id="bearfacts1" class="row bearinforow">
+		<div class="col-lg-6">
+			<img src="images/bear1.jpeg" id="bearfacts1" class="img-fluid" alt="BEARS"/>
+		</div>
+		<div class="col-lg-6">
+			Bears are carnivoran mammals of the family Ursidae. They are classified as caniforms, or doglike carnivorans. Although only eight species of bears are extant, they are widespread, appearing in a wide variety of habitats throughout the Northern Hemisphere and partially in the Southern Hemisphere. Bears are found on the continents of North America, South America, Europe, and Asia. Common characteristics of modern bears include large bodies with stocky legs, long snouts, small rounded ears, shaggy hair, plantigrade paws with five nonretractile claws, and short tails.
+		</div>
+	</div>
+	<div class="row">
+		<div class="col bearheader">
+		<h1>Bear Facts 2</h1>
+		</div>
+	</div>
+	<div id="bearfacts2" class="row bearinforow">
+		<div class="col-lg-6 order-lg-2">
+			<img src="images/bear2.jpeg" id="bearfacts2" class="img-fluid" alt="BEARS"/>
+		</div>	
+		<div class="col-lg-6 order-lg-1">
+			While the polar bear is mostly carnivorous, and the giant panda feeds almost entirely on bamboo, the remaining six species are omnivorous with varied diets. With the exception of courting individuals and mothers with their young, bears are typically solitary animals. They may be diurnal or nocturnal and have an excellent sense of smell. Despite their heavy build and awkward gait, they are adept runners, climbers, and swimmers. Bears use shelters, such as caves and logs, as their dens; most species occupy their dens during the winter for a long period of hibernation, up to 100 days.
+		</div>
+	</div>
+</div>
 </body>
 </html>
