--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -14,7 +14,7 @@
 	}
 	
 	.bearinforow {
-		margin: 10px;
+		margin: 20px;
 	}
 	.bearheader {
 		text-align: center;
@@ -40,6 +40,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#bearfacts2">Bear Facts 2</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#bearfacts3">Bear Facts 3</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Bears
@@ -58,32 +61,52 @@
 </nav>
 
 <div class="contentcontainer container-fluid">
-	<div class="row">
+	<div id="bearfacts1" class="row">
 	<div class="col bearheader">
 		<h1>Bear Facts 1</h1>
 		</div>
 	</div>
-	<div id="bearfacts1" class="row bearinforow">
-		<div class="col-lg-6">
+	<div class="row bearinforow">
+		<div class="col-lg-4">
 			<img src="images/bear1.jpeg" id="bearfacts1" class="img-fluid" alt="BEARS"/>
 		</div>
-		<div class="col-lg-6">
+		<div class="col-lg-8">
 			Bears are carnivoran mammals of the family Ursidae. They are classified as caniforms, or doglike carnivorans. Although only eight species of bears are extant, they are widespread, appearing in a wide variety of habitats throughout the Northern Hemisphere and partially in the Southern Hemisphere. Bears are found on the continents of North America, South America, Europe, and Asia. Common characteristics of modern bears include large bodies with stocky legs, long snouts, small rounded ears, shaggy hair, plantigrade paws with five nonretractile claws, and short tails.
 		</div>
 	</div>
-	<div class="row">
+	<div id="bearfacts2" class="row">
 		<div class="col bearheader">
 		<h1>Bear Facts 2</h1>
 		</div>
 	</div>
-	<div id="bearfacts2" class="row bearinforow">
-		<div class="col-lg-6 order-lg-2">
+	<div class="row bearinforow">
+		<div class="col-lg-4 order-lg-2">
 			<img src="images/bear2.jpeg" id="bearfacts2" class="img-fluid" alt="BEARS"/>
 		</div>	
-		<div class="col-lg-6 order-lg-1">
+		<div class="col-lg-8 order-lg-1">
 			While the polar bear is mostly carnivorous, and the giant panda feeds almost entirely on bamboo, the remaining six species are omnivorous with varied diets. With the exception of courting individuals and mothers with their young, bears are typically solitary animals. They may be diurnal or nocturnal and have an excellent sense of smell. Despite their heavy build and awkward gait, they are adept runners, climbers, and swimmers. Bears use shelters, such as caves and logs, as their dens; most species occupy their dens during the winter for a long period of hibernation, up to 100 days.
 		</div>
 	</div>
+	<div id="bearfacts3" class="row">
+		<div class="col bearheader">
+		<h1>Bear Facts 3</h1>
+		</div>
+	</div>
+	<div class="row bearinforow">
+		<div class="col-lg-4">
+			<img src="images/bear3.jpeg" id="bearfacts3" class="img-fluid" alt="BEARS"/>
+		</div>	
+		<div class="col-lg-8">
+			Bears have been hunted since prehistoric times for their meat and fur; they have been used for bear-baiting and other forms of entertainment, such as being made to dance. With their powerful physical presence, they play a prominent role in the arts, mythology, and other cultural aspects of various human societies. In modern times, bears have come under pressure through encroachment on their habitats and illegal trade in bear parts, including the Asian bile bear market. The IUCN lists six bear species as vulnerable or endangered, and even least concern species, such as the brown bear, are at risk of extirpation in certain countries. The poaching and international trade of these most threatened populations are prohibited, but still ongoing.
+		</div>
+	</div>
 </div>
+
+<footer class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; Bear Inc.</small>
+    </div>
+</footer>
+  
 </body>
 </html>
