This is the completion of the sample bootstrap page.

--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
   <style>
 	.contentcontainer {
 		margin-top: 10px;
@@ -31,17 +29,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#bearfacts1">Bear Fact 1</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#bearfacts1">Bear Facts 1</a>
+        <a class="nav-link" href="#bearfacts2">Bear Fact 2</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#bearfacts2">Bear Facts 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#bearfacts3">Bear Facts 3</a>
+        <a class="nav-link" href="#bearfacts3">Bear Fact 3</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -63,7 +58,7 @@
 <div class="contentcontainer container-fluid">
 	<div id="bearfacts1" class="row">
 	<div class="col bearheader">
-		<h1>Bear Facts 1</h1>
+		<h1>Bear Fact 1</h1>
 		</div>
 	</div>
 	<div class="row bearinforow">
@@ -76,7 +71,7 @@
 	</div>
 	<div id="bearfacts2" class="row">
 		<div class="col bearheader">
-		<h1>Bear Facts 2</h1>
+		<h1>Bear Fact 2</h1>
 		</div>
 	</div>
 	<div class="row bearinforow">
@@ -89,7 +84,7 @@
 	</div>
 	<div id="bearfacts3" class="row">
 		<div class="col bearheader">
-		<h1>Bear Facts 3</h1>
+		<h1>Bear Fact 3</h1>
 		</div>
 	</div>
 	<div class="row bearinforow">
@@ -104,9 +99,11 @@
 
 <footer class="py-4 bg-dark text-white-50">
     <div class="container text-center">
-      <small>Copyright &copy; Bear Inc.</small>
+      <small>Copyright &copy; Bear Inc. - All bear facts sourced from Wikipedia</small>
     </div>
 </footer>
-  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
